[package]
name = "jetrocli"
version = "0.1.0"
edition = "2021"
authors = ["Milad (Mike) Taghavi <mitghi@gmail.com>"]
license = "MIT"
readme = "README.md"
exclude = [".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive", "string", "unicode", "env"] }
jetro = { path = "../../jetro" }
serde = { version = "1.0.154", features = ["derive", "serde_derive"] }
serde_json = "1.0.94"
